app/assets/stylesheets/modules/_reels.css.scss
.reel-page {

  .preloader {
    display: none;
  }

  .hero {
    padding: 30px 0 30px;
    background: #fff;
    text-align: center;

    h4 {
      width: 50%;
      margin: 0 auto;
    }
  }

  .interests a {
    color: $med-gray;
  }

  .link-bar {
    width: 100%;
    border-top: solid $lt-gray 1px;
    padding: 5px 0;
    position: relative;
    -webkit-box-shadow: 0px 1px 2px 1px rgba(0,0,0,0.22);
    -moz-box-shadow: 0px 1px 2px 1px rgba(0,0,0,0.22);
    box-shadow: 0px 1px 2px 1px rgba(0,0,0,0.22);
    height: 50px;

    .avatar {
      height: 40px;
      width: 40px;
      margin: 0;
      float: none;
      display: inline-block !important;
      border-radius: 100px;
      background-size: cover;
      background-position: center center;
      background-repeat: no-repeat;
    }

    .col-md-8, .col-md-2 {
      padding: 0;
    }

    .col-md-2 {
      text-align: right
    }

    .avatar, h5 {
      display: inline;
      vertical-align: middle
    }
  }

  .edit-reel {
    padding: 5px 20px;
    //float: right;
    margin-top: 2px;
  }

  .fb-share-button {
    margin-top: 6px;
  }
}

.reel {
  background: #e9e9e9;
  min-height: 645px;
  padding-top: 40px;

  .grid-container {
    width: 1140px;
    margin: 0 auto;
  }

  .reel-grid {
    background: #fff;
    border-radius: 4px;
    padding: 20px 0;
    -webkit-box-shadow: 0px 1px 2px 1px rgba(0,0,0,0.22);
    -moz-box-shadow: 0px 1px 2px 1px rgba(0,0,0,0.22);
    box-shadow: 0px 1px 2px 1px rgba(0,0,0,0.22);

    ul {
      padding-left: 30px;
    }

    img, iframe {
      width: 100%;
    }

    .grid-item {
      border-radius: 10px;
      padding-top: 260px;
      position: relative;
      background-size: cover;
      background-repeat: no-repeat;
      background-position: center center;
      overflow: hidden;
      height: 300px;
      width: 350px;
      text-align: center;

      img {
        height: 40px;
        width: 40px;
        position: absolute;
        top: 47%;
      }
    }

    .caption {
      width: 100%;
      bottom: 0;
      padding: 5px 30px;
      color: #fff;
      background-color:rgba(0, 0, 0, 0.4);
    }
  }
}

@media (max-width: 1140px) {
  .reel {
    .grid-container {
      width: 770px;
    }
  }
}


@media (max-width: 767px) {

  .reel {
    .grid-container {
      width: 100%;
      text-align: center;

      ul {
        padding: 0;
      }
    }
  }
}

@media (max-width: 450px) {
  .reel-page {
    .hero {
      h4 {
        width: 90%;
      }
    }
  }

  .reel-page {
    .edit-reel {
      position: relative;
      width: 100%;
      padding: 10px 0;
      margin: 20px 0;
    }
  }
}

